correction contrast

--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ a{
 .button{
     color: white;
     border-radius: 30px;
-    background-color: #F3976C;
+    background-color: #D04A0A;
     border: none;
     height: 40px;
     width: 110px;
